création class Location

--- a/lieux.html
+++ b/lieux.html
@@ -5,9 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="scss/main.scss">
+    <script src="/lieux/js/script.js"></script>
 </head>
 <body>
-
+    <div class="locations">
+        <div class="locations_bg">
+            <img src="images/dance_g.gif" alt="rick and morty">
+        </div>
+        <div class="locations_body">
+            <h1 class="locations_title">Rick And Morty</h1>
+            <span class="locations_count">Location (108)</span>
+            <a class="locations_link" href="">Pages suivante</a>
+            <ul class="locations_list">
+                <li>
+                    <a id="1" href="#" class="location_name">Earth (C-137)</span>
+                    <span class="location_dimension">Dimension C-137</span>
+                </li>
+                <li>
+                    <a id="1" class="location_name">Earth (C-137)</span>
+                    <span class="location_dimension">Dimension C-137</span>
+                </li>
+            </ul>
+        </div>
+    </div>
+    
+    
 </body>
 </html>
