--- a/lieux.html
+++ b/lieux.html
@@ -15,23 +15,47 @@
         <div class="locations_bg">
             <img src="images/dance_g.gif" alt="rick and morty">
         </div>
-        <div class="locations_body">
-            <h1 class="locations_title">Rick And Morty</h1>
-            <span class="locations_count">Location (108)</span>
-            <a class="locations_link" href="">Pages suivante</a>
-            <ul class="locations_list">
-                <li>
-                    <a id="1" href="#" class="location_name">Earth (C-137)</span>
-                    <span class="location_dimension">Dimension C-137</span>
-                </li>
-                <li>
-                    <a id="1" class="location_name">Earth (C-137)</span>
-                    <span class="location_dimension">Dimension C-137</span>
-                </li>
-            </ul>
+        <div class="search_by_type">
+            <h2>Recherche</h2>
+            <span>
+                <input type="radio" name="type" value="All">
+                All
+            </span>
+            <span>
+                <input type="radio" name="type" value="Planet">
+                Planet
+            </span>
+            <span>
+                <input type="radio" name="type" value="Cluster">
+                Cluster
+            </span>
+            <span>
+                <input type="radio" name="type" value="Space station">
+                Space station
+            </span>
+            <span>
+                <input type="radio" name="type" value="Microverse">
+                Microverse
+            </span>
+            <span>
+                <input type="radio" name="type" value="TV">
+                TV
+            </span>
+            <span>
+                <input type="radio" name="type" value="Resort">
+                Resort
+            </span>
+            <span>
+                <input type="radio" name="type" value="Fantasy town">
+                Fantasy town
+            </span>
+            <span>
+                <input type="radio" name="type" value="Dream">
+                Dream
+            </span>
         </div>
     </div>
-    
-    
+   
+    <div class="dataList"></div>
 </body>
 </html>
