--- a/lieux.html
+++ b/lieux.html
@@ -9,25 +9,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Vampiro+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
     <link rel="stylesheet" href="scss/main.scss">
-    <script src="lieux/js/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sketch.js/1.0/sketch.min.js" defer></script>
+    <script src="lieux_episode/js/lieux.js" defer></script>
 </head>
-<body class="lieux">
+<body class="body_bg">
     <header>
         <nav>
-            <a href="index.html">Accueil</a>
-            <a href="personnage.html">Personnage</a>
-            <a href="episode.html">Episode</a>
-            <a href="lieux.html">Location</a>
+          <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="episode.html">Épisose</a></li>
+            <li><a href="personnage.html">Personnages</a></li>
+            <li><a href="lieux.html">Locations</a></li>
+          </ul>
         </nav>
-    </header>
-    <div class="locations">
-        <div class="autocomplete" style="width:300px;">
-            <input id="myInput" type="text"  placeholder="Types">
-            <input type="submit" class="search">
+      
+        <h1 class="locations_title">Rick And Morty</h1>
+        <p class="tagline">Hover over header for blood</p>
+      </header>
+      <div class="wrapper">
+        <div class="wrapper_bg"></div>
+        <div class="locations">
+            <div class="autocomplete" style="width:300px;">
+                <input id="myInput" type="text"  placeholder="Types">
+                <input type="submit" class="search">
+            </div>
+            <div class="dataList"></div>
         </div>
-
-        <div class="dataList"></div>
-    </div>
-    <div class="buttons"></div>
+        <div class="buttons"></div>
+      </div>
 </body>
 </html>
