--- a/lieux.html
+++ b/lieux.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Locations</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Vampiro+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
     <link rel="stylesheet" href="scss/main.scss">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sketch.js/1.0/sketch.min.js" defer></script>
     <script src="lieux_episode/js/lieux.js" defer></script>
 </head>
-<body class="body_bg">
+<body class="lieux">
     <header>
         <nav>
           <ul>
@@ -23,12 +22,11 @@
           </ul>
         </nav>
       
-        <h1 class="locations_title">Rick And Morty</h1>
+        <h1 class="locations_title">Locations</h1>
         <p class="tagline">Hover over header for blood</p>
       </header>
       <div class="wrapper">
-        <div class="wrapper_bg"></div>
-        <div class="locations">
+        <div class="app">
             <div class="autocomplete" style="width:300px;">
                 <input id="myInput" type="text"  placeholder="Types">
                 <input type="submit" class="search">
