--- a/personnage.html
+++ b/personnage.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Episodes</title>
+  <title>Personnages</title>
   <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Vampiro+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="scss/main.scss">
@@ -23,7 +23,7 @@
       </ul>
     </nav>
 
-    <h1 class="episodes_title">Episodes</h1>
+    <h1 class="episodes_title">Personnages</h1>
     <p class="tagline">Hover over header for blood</p>
   </header>
 
@@ -56,6 +56,7 @@
   <div class="wrapper">
     <div class="wrapper_bg"></div>
 
+    
     <div class="app">
       <div class="radios">
         <label for="">All
@@ -69,6 +70,8 @@
         </label>
       </div>
       
+
+
       <div class="app_body">
         <div class="app_lists cardV3"></div>
       </div>
