Add page index.html

--- a/lieux.html
+++ b/lieux.html
@@ -25,7 +25,7 @@
         <h1 class="locations_title">Locations</h1>
         <p class="tagline">Hover over header for blood</p>
       </header>
-      <div class="wrapper">
+      <div class="wrapper_lieux">
         <div class="app">
             <div class="autocomplete" style="width:300px;">
                 <input id="myInput" type="text"  placeholder="Types">
