--- a/episode.html
+++ b/episode.html
@@ -27,7 +27,7 @@
         <a href="javascript:void(0)" class="closebtn">&times;</a>
         <div class="overlay-content"></div>
       </div>
-      <div class="wrapper">
+      <div class="wrapper_episode">
         <div class="wrapper_bg"></div>
         <div class="app">
             <div class="radios">
