--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Vampiro+One&display=swap" rel="stylesheet">    <link rel="stylesheet" href="scss/main.scss">
+    <title>Rick and Morty</title>
+    <link href="https://fonts.googleapis.com/css2?family=Vampiro+One&display=swap" rel="stylesheet">   
+    <link rel="stylesheet" href="scss/main.scss">
 </head>
-<body>
+<body class="home">
     <header>
         <nav>
             <a href="index.html">Accueil</a>
@@ -18,6 +17,8 @@
             <a href="lieux.html">Location</a>
         </nav>
     </header>
-    <div class="dataList"></div>
+    <div class="wrapper_body">
+        <h1>L'aventure commence</h1>
+    </div>
 </body>
 </html>
